commit with changes till appointment